[package]
name = "million-dollar-words"
version = "0.1.0"
authors = ["Steven Black <steveb@stevenblack.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
textwrap = "0.14"